force-app/main/default/objects/API_Industry_Group_and_Type__c/API_Industry_Group_and_Type__c.object-meta.xml
<CustomObject>
    <label>Master Industry Group and Type</label>
    <nameField>
        <label>API Industry Group and Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Industry Group and Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>