force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/attributes_industry_group_description__c.field-meta.xml
<CustomField>
    <fullName>attributes_industry_group_description__c</fullName>
    <label>attributes_industry_group_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>