force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/attributes_karyawan__c.field-meta.xml
<CustomField>
    <fullName>attributes_karyawan__c</fullName>
    <label>attributes_karyawan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>