force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/attributes_percent_omset__c.field-meta.xml
<CustomField>
    <fullName>attributes_percent_omset__c</fullName>
    <label>attributes_percent_omset</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>