force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/attributes_sandi_biojk__c.field-meta.xml
<CustomField>
    <fullName>attributes_sandi_biojk__c</fullName>
    <label>attributes_sandi_biojk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>