force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/attributes_slik_code__c.field-meta.xml
<CustomField>
    <fullName>attributes_slik_code__c</fullName>
    <label>attributes_slik_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>