force-app/main/default/objects/API_Industry_Group_and_Type__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <formula>name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Type</label>
    <type>Text</type>
</CustomField>