force-app/main/default/objects/API_Industry_Group_and_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>name__c</columns>
    <columns>id__c</columns>
    <columns>code__c</columns>
    <columns>attributes_industry_group_description__c</columns>
    <columns>parent_id_formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>name__c</field>
        <operation>contains</operation>
        <value>IJIN</value>
    </filters>
    <label>All</label>
</ListView>